cli/src/tests/error/comparing.sibs
$mode != = "dev";
@env::is_os(window) == "true;
@env::is_os(window) != -true";
@env::is_os(window) == ("a", "b");
@env::is_os(window) != ("a"; "b",);
"dev" == =$mode;
"dev" != $=mode;
"true == @env::is_os(window);
"true" !== @env::is_os(window);
("a", "b") == @env::is_os(window);
("a" "b") != @env::is_os(window);